# Viewer

./: .gitignore  CMakeLists.txt  LinuxDebug.sh  LinuxRelease.sh  MacOSDebug.sh  MacOSRelease.sh  README.md  WindowsDebug.cmd  WindowsRelease.cmd  conanfile.txt
ViewerCore/: CMakeLists.txt
ViewerCore/includes/: BufferLayout.h  ConsoleWidget.h  Event.h  Game.h  IResource.h  LogManager.h  Mesh.h  MeshResource.h  Model.h  ResourceManager.h  ShaderProgram.h  ShaderResource.h  Texture.h  VertexArray.h  VertexBuffer.h  Window.h
ViewerCore/sources/: Application.cpp  ConsoleWidget.cpp  Game.cpp  IndexBuffer.cpp  LogManager.cpp  Mesh.cpp  MeshResource.cpp  Model.cpp  ResourceManager.cpp  ShaderProgram.cpp  ShaderResource.cpp  Texture.cpp  UniformBuffer.cpp  VertexBuffer.cpp  Window.cpp  main.cpp
data/Models/: map.mtl
data/Shaders/: General.frag  General.vert  Red.frag
